# cpp-abstractions-lab

./: CMakeLists.txt  README.md
docs/: optional.md
examples/: optional_demo.cpp
include/cpp_abstractions_lab/: optional.hpp
src/: optional.cpp
